--- a/templates/admin/user/removeUser/modal.html.twig
+++ b/templates/admin/user/removeUser/modal.html.twig
@@ -7,18 +7,16 @@
             <div class="modal-body login-body mb-4">
                 <div class="row d-flex flex-column align-items-center justify-content-center">
                     <div class="col-sm-6 d-flex flex-column align-items-center justify-content-center">
-                        <span class="mt-2 text-black d-lg-inline text-center">Êtes-vous sûr de vouloir
-                        bannir cet utilisateur ?</span>
+                        <p class="mt-2 text-black d-lg-inline text-center">Êtes-vous sûr de vouloir
+                        bannir cet utilisateur ?</p>
                     </div>
                 </div>
             </div>
             <div class="modal-footer bannirButton">
-                <button type="button" class="row col-6 oui d-flex justify-content-center">
-                    <a href="{#{ path('admin.user.bannir') }#}">Oui</a>
-                </button>
+                <button type="submit" class="row col-6 oui d-flex justify-content-center" id="deleteUser">Oui</button>
                 
                 <div class="diviser-col"></div>
-                <button type="button" class="row col-6 non d-flex justify-content-center" data-dismiss="modal">Non</button>
+                <button type="submit" class="row col-6 non d-flex justify-content-center" data-dismiss="modal" id='non'>Non</button>
             </div>
         </div>
     </div>
