la modification et le bannissement des chaines fonctionnent cotéadmin

--- a/templates/admin/channel/base.html.twig
+++ b/templates/admin/channel/base.html.twig
@@ -24,7 +24,7 @@
                                 <div class="col">
                                     <div class="form-group has-search ">
                                         <span class="fa fa-search form-control-feedback"></span>
-                                        <input type="text" class="form-control text-dark" placeholder="Rechercher une radio"> 
+                                        <input type="text" class="form-control text-dark" placeholder="Rechercher une radio" id="search"> 
                                     </div>
                                 </div>
                             </div>
