--- a/templates/admin/channel/editChannel/editChannel.html.twig
+++ b/templates/admin/channel/editChannel/editChannel.html.twig
@@ -64,7 +64,7 @@
                             <div class="row">
                                 <div class="col mr-2 mb-2 d-flex flex-column align-items-center justify-content-center">
                                     <div class="text-principal justify-content-center">Nombre favoris</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbFavoris">98’578</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbFavoris"></div>
                                 </div>
                             </div>
                         </div>
@@ -77,22 +77,22 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mr-2 mb-2 d-flex flex-column align-items-center justify-content-center">
-                                    <div class="text-bleue">Nombre d’abonnés</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbAbonne">44’577</div>
+                                    <div class="text-bleue">Nombre d’ecoutes</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbEcoute"></div>
                                 </div>
                             </div>
                         </div>
                         </div>
                     </div>
 
-                    <!-- Total d'écoutes Card Example -->
+                    <!-- Total de plannification Card Example -->
                     <div class="col-xl-3 col-md-6 mb-4">
                         <div class="card shadow h-80 border-raduis py-2">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mr-2 d-flex flex-column align-items-center justify-content-center">
-                                    <div class="text-turquoise">Total d'écoutes</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbEcoute">453’987</div>
+                                    <div class="text-turquoise">Total de plannification</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbPlan"></div>
                                 </div>
                             </div>
                         </div>
@@ -106,7 +106,7 @@
                             <div class="row">
                                 <div class="col mr-2  mb-2 d-flex flex-column align-items-center justify-content-center">
                                     <div class="text-purple">Nombre de stream créée</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">24’767</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbStream"></div>
                                 </div>
                             </div>
                         </div>
