--- a/templates/admin/channel/editChannel/script.html.twig
+++ b/templates/admin/channel/editChannel/script.html.twig
@@ -64,52 +64,55 @@ $(document).ready(function() {
         /*
         * affiche une chaine 
         */
-        $.ajax({
-            type: "POST", 
-            url: "/admin/channel/show-one-channel", 
-            data: JSON.stringify({
-                "token": token,
-                "idChannel": idChannel,
-            }),
-            dataType: 'json',
-            async: true,
-            success: function(response) {
-                reset();
 
-                if(response != undefined){
-                
+        $.ajax({
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/channels/"+idChannel,
+            headers: {
+                'Authorization':'Bearer ' + token
+            }
+
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
                     $('#channels').attr('value', response.channel.channel_name);
                     $('#profil').attr('src', response.channel.avatar);
+                    $('#nbEcoute').html(response.channel.nbr_ecoute);
                 }
-
                 console.log(response);
-            },
-            error: function (error) {
 
-                reset();
-                console.log(error);
-            }
-        }); // fin ajax affiche 
+        }).fail((error) =>{
+            
+            console.log(error);
+        });
 
-
+        
 
         /*
         * Total de stream crée pour une chaîne
         */
 
         $.ajax({
-            type: "POST",
-            url: "",
-            data:JSON.stringify({}),
-            success: function(response){
-
-            },
-            async: true,
-            error: function(err){
-
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/stats/stream/"+idChannel,
+            headers: {
+                'Authorization':'Bearer ' + token
             }
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    $('nbStream').html(response.stream_crée);
+                    console.log(response.stream_crée);
+                }
+                console.log(response);
 
-        });// fin stream total pour chaine   
+        }).fail((error) =>{
+            
+            console.log(error);
+        });
+    // fin stream total pour chaine   
 
 
         /*
@@ -117,70 +120,65 @@ $(document).ready(function() {
         */
 
         $.ajax({
-            type: "POST",
-            url: "",
-            data: JSON.stringify({}),
-            success: function(response){
-
-            },
-            async: true,
-            error: function(err){
-
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/stats/stream/plan/5e96bc595ca841cb25233bf7",
+            headers: {
+                'Authorization':'Bearer ' + token
             }
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    $('#nbFavoris').html(response.favoris);
+                    console.log(response.favoris);
+                }
+                console.log(response);
 
+        }).fail((error) =>{
+            
+            console.log(error);
         });// fin Total de favoris d'une chaîne
 
 
         /*
-        * 
+        * Total de plannification pour un utilisateur
         */
 
         $.ajax({
-            type: "POST",
-            url: "",
-            data: JSON.stringify({}),
-            success: function(response){
-
-            },
-            async: true,
-            error: function(err){
-
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/stats/stream/plan/"+idChannel,
+            headers: {
+                'Authorization':'Bearer ' + token
             }
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    $('#nbPlan').html(response.nombre_plannification);
+                    console.log(response.nombre_plannification);
+                }
+                console.log(response);
 
+        }).fail((error) =>{
+            
+            console.log(error);
         });// 
 
-        /*
-        * 
-        */
+ 
 
+        //firebase
         $.ajax({
-            type: "POST",
-            url: "",
-            data: JSON.stringify({}),
-            success: function(response){
+            type: "GET",
+            url: "/firebase",
+        }).done((data) =>{
 
-            },
-            async: true,
-            error: function(err){
-
-            }
-
-        });// 
-    }
-
-    $.ajax({
-    method: "GET", 
-    url: "/firebase", 
-    success: function(data) {
-    
-        firebaseConfig = {
-            apiKey: data.apiKey,
-            authDomain: data.authDomain,
-            databaseURL: data.databaseURL,
-            projectId: data.projectId,
-            storageBucket: data.storageBucket
-        };
-
+            firebaseConfig = {
+                apiKey: data.apiKey,
+                authDomain: data.authDomain,
+                databaseURL: data.databaseURL,
+                projectId: data.projectId,
+                storageBucket: data.storageBucket
+            };
 
         firebase.initializeApp(firebaseConfig);
 
@@ -216,7 +214,6 @@ $(document).ready(function() {
         });// change profil 
 
 
-
         $('#button-settingsAdmin').click(function(e){
                 e.preventDefault();
                 disable();
@@ -233,18 +230,25 @@ $(document).ready(function() {
                  
                 $.ajax({
                     type: "PUT", 
-                    url: `https://webradio-stream.herokuapp.com/authorized/channels/update/${idChannel}`, 
+                    url: "https://webradio-stream.herokuapp.com/authorized/channels/update/"+idChannel, 
+                     headers: {
+                        'Authorization':'Bearer ' + token
+                    },
                     data:{
-                        token: token,
                         avatar: profil,
-                        channelName: channelName,
+                        name: channelName,
                     },
                     dataType: 'json'
                 }).done((response)=>{
-
                         reset();
 
-                        console.log(response);
+                if(response.message != undefined)
+                {
+                    $('#updatecompte').html(response.message);
+                    $('#updatecompte').css("display","block");
+
+                    console.log(response.message);
+                }
 
                 }).fail((error)=>{
 
@@ -257,14 +261,14 @@ $(document).ready(function() {
 
         });  //fin 
 
-    },
+
+        }).fail((error) =>{
+
+            console.log(error);
+        });
+    }// fin de grand if
+
     
-
-    }); // firebase
-
-
-    
-
     
 });
 </script>
